fix: overflow of map

--- a/css/map.css
+++ b/css/map.css
@@ -1,36 +1,25 @@
-body {
-    
+.map_bg {
+    position: relative;
+    overflow-x: scroll;
+    min-height: 680px;
 }
 
-.content {
+.map {
     background-image: url("../img/pokemongo_bg.jpg");
     background-size: cover;
     width: 200%;
+    height: 100%;
     opacity: 0.7;
-    overflow-y: clip;
-    overflow-x: scroll;
-    left: 50%;
-}
-
-.footer {
-    overflow-x: none;
-}
-.profile {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .iphone {
-    overflow-x: scroll;
+    /*overflow-x: scroll;*/
 }
 
 
 .avatartext {
     background-color: white;
-  
+
     border-radius: 4px;
     position: fixed;
     top: 80%;
